--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "@mui/material": "^5.10.6",
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/styles": "^5.10.7",
+    "@stripe/stripe-js": "^1.38.1",
+    "@tanstack/react-query": "^4.10.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.10.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.2",
+    "use-shopping-cart": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
